2007-10-04  Sancho Lerena <slerena@gmail.com>

	* lib/PandoraFMS/DB.pm: Fixed a missing $ in sub header definition for args :( 
	and some warnings also fixed.

	* conf/pandora_server.conf, lib/PandoraFMS/Config.pm, bin/pandora_network:

	Merged code from NG branch: Added multiping check (global setting 'icmp_checks')
	on network server because in some WAN enviroments with erratic packet loss on non TCP
	connections would cause recurrent false positives. New config token added to config
	file (icmp_checks).

2007-10-03  Sancho lerena <slerena@gmail.com>

	* lib/PandoraFMS/DB.pm: Fixed alert that fires always one time more than
	max_alert defined. Also fixed several issues with "Ceased" support for alerts
	and correct internal_counter problem. Now works fine !

	* util/pandora_db.pl: Purge of tagent_access was not working fine, and fixed
	another problem with id_agent 0 data in tagente_datos.

	After about 12 hours of intense testing this seems to work very fine, probably
	this server code will be the final ! :-)

2007-10-02  Sancho Lerena  <slerena@gmail.com>

	* lib/PandoraFMS/DB.pm: Updated and fixed several problems with alerts. 
	Now notification of alert ceased is properly implemented and works
	inside threshold timegap. Event are fired using alert description and not
	alert type, and automatically ceased alerts (depending on min_alert and 
	internal counter) give up alert status and generate event.

	* bin/pandora_snmpconsole: Updated call to execute_alert.

2007-10-01  Sancho Lerena  <slerena@gmail.com>

	* lib/PandoraFMS/DB.pm: Fixed bug for autoimported modules #1805654

	* lib/PandoraFMS/DB.pm: Fixed problem with fixed alerts. Now reports when 
	problem its fixed in event manager (after threshold expires!).

2007-08-28  Sancho Lerena  <slerena@gmail.com>

	* util/pandora_db.pl: Added some fixes and new checks for database
	consistency. Also purge non-init modules (needed to avoid unused modules 
	that take too much time on network servers!).
